Opened 18 years ago

Closed 18 years ago

Last modified 18 years ago

#189 closed bug (fixed)

KDL shoudn't print "unknown command..." if return pressed

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: System/Kernel Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

KDL prints "unknown command..." if return pressed. Sometimes it even son't understand 'sc' command, but after second try it accepts. Screenshot will follow... Tested with rev16432 under vmware.

Attachments (1)

kdebug.PNG (9.4 KB ) - added by diver 18 years ago.
kdebug

Download all attachments as: .zip

Change History (5)

by diver, 18 years ago

Attachment: kdebug.PNG added

kdebug

comment:1 by axeld, 18 years ago

Resolution: fixed

comment:2 by axeld, 18 years ago

Status: newclosed

comment:3 by axeld, 18 years ago

Fixed in hrev16452. The problem with the "sc" command could likely happen when you press some unprintable keys that end up in the input buffer. You usually see a problem when you press "cursor up" in the debugger, then.

BTW, it really doesn't make any sense to add a screen shot for bugs like this. Especially if it is easily reproducible.

comment:4 by diver, 18 years ago

BTW, it really doesn't make any sense to add a screen shot for bugs like this. Especially if it is easily reproducible.

Got it. Thanks, Axel!

Note: See TracTickets for help on using tickets.