No longer says "unknown command" to an empty input string in the debugger. This fixes bug #189.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16452 a95241bf-73f2-0310-859d-f6bbb57e9c96